--- a/SampleMultiview/ExerciseDetail.xib
+++ b/SampleMultiview/ExerciseDetail.xib
@@ -48,7 +48,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{252, 20}, {374, 56}}</string>
 								<reference key="NSSuperview" ref="1048429891"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="678505337"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -96,7 +95,6 @@
 														<object class="NSPSMatrix" key="NSFrameMatrix"/>
 														<string key="NSFrame">{{520, 65}, {37, 37}}</string>
 														<reference key="NSSuperview" ref="53813933"/>
-														<reference key="NSWindow"/>
 														<bool key="IBUIOpaque">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 														<int key="IBUIContentHorizontalAlignment">0</int>
@@ -137,7 +135,6 @@
 																<object class="NSPSMatrix" key="NSFrameMatrix"/>
 																<string key="NSFrameSize">{487, 127}</string>
 																<reference key="NSSuperview" ref="880963530"/>
-																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="956294132"/>
 																<object class="NSColor" key="IBUIBackgroundColor" id="163243084">
 																	<int key="NSColorSpace">3</int>
@@ -149,7 +146,6 @@
 														<object class="NSPSMatrix" key="NSFrameMatrix"/>
 														<string key="NSFrame">{{20, 20}, {492, 126}}</string>
 														<reference key="NSSuperview" ref="53813933"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="290402998"/>
 														<reference key="IBUIBackgroundColor" ref="163243084"/>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -159,7 +155,6 @@
 												<object class="NSPSMatrix" key="NSFrameMatrix"/>
 												<string key="NSFrame">{{20, 20}, {566, 166}}</string>
 												<reference key="NSSuperview" ref="291226198"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="880963530"/>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">1</int>
@@ -171,7 +166,6 @@
 										<object class="NSPSMatrix" key="NSFrameMatrix"/>
 										<string key="NSFrameSize">{606, 206}</string>
 										<reference key="NSSuperview" ref="678505337"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="53813933"/>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">3</int>
@@ -183,7 +177,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{20, 84}, {606, 206}}</string>
 								<reference key="NSSuperview" ref="1048429891"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="291226198"/>
 								<reference key="IBUIBackgroundColor" ref="163243084"/>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -192,7 +185,6 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrameSize">{646, 472}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="420885805"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -204,7 +196,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {646, 472}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -1166,18 +1157,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">65</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
